Wiki: "Exclude CPM" setting

--- a/1/EomTool/EomToolWeb/Views/Wiki/Settings.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Wiki/Settings.cshtml
@@ -19,5 +19,9 @@
         @Html.LabelFor(m => m.ExcludeInactive)
         @Html.EditorFor(m => m.ExcludeInactive)
     </p>
+    <p>
+        @Html.LabelFor(m => m.ExcludeCPM)
+        @Html.EditorFor(m => m.ExcludeCPM)
+    </p>
 </fieldset>
 }
