--- a/1/EomTool/EomToolWeb/Views/PaymentBatches/Payments.cshtml
+++ b/1/EomTool/EomToolWeb/Views/PaymentBatches/Payments.cshtml
@@ -4,18 +4,23 @@
     var iGroup = ViewData["iGroup"];
     int iPayment = 0;
     var payoutTotal = Model.Sum(p => p.PubPayout);
+    var publisherGroups = Model.GroupBy(p => p.Publisher).OrderBy(pg => pg.Key);
 }
 
 <table style="border:solid">
 <caption style="text-align:left">@Model.Key.Currency | @Model.Key.PaymentMethod | @Model.Key.NetTermType</caption>
-@foreach (var payment in Model.OrderBy(p => p.Publisher))
+@foreach (var pubGroup in publisherGroups)
 {
-<tr>
-    <td>@payment.AccountingPeriod</td>
-    <td><a href="#" onclick="ShowPubRep('@payment.Publisher', '@payment.AccountingPeriod'); return false">@payment.Publisher</a></td>
-    <td style="text-align:right">@Html.FormatCurrency(payment.PubPayCurr, payment.PubPayout.Value)</td>
-    <td><a href="#" onclick="ShowNotes('@payment.Publisher');return false">notes</a></td>
-    <td id="actionarea@(iGroup)_@(iPayment)">
+    foreach (var payment in pubGroup)
+    {
+    <tr class="@(pubGroup.Count() > 1 ? "pubSubtotalRow" : "")">
+        <td>@payment.AccountingPeriod</td>
+        <td><a href="#" onclick="ShowPubRep('@payment.Publisher', '@payment.AccountingPeriod'); return false">@payment.Publisher</a></td>
+        <td style="text-align:right">@Html.FormatCurrency(payment.PubPayCurr, payment.PubPayout.Value)</td>
+        <td>@if (pubGroup.Count() == 1) {
+            <a href="#" onclick="ShowNotes('@payment.Publisher');return false">notes</a>
+        }</td>
+        <td id="actionarea@(iGroup)_@(iPayment)">
         @using (Html.BeginForm("ReleaseItems", "PaymentBatches", FormMethod.Post, new { id = "form" + iGroup + "_" + iPayment }))
         {
             <input type="hidden" name="acctperiod" value="@payment.AccountingPeriod" />
@@ -36,20 +41,38 @@
                 <a href="#" onclick="if (confirm('Press OK to confirm Reset')) ResetPayment('@(iGroup +"_"+ iPayment)'); return false">Reset</a>
             }
         }
-    </td>
-@if (pvm.Test == "all") {
-    <td>@payment.PaymentBatchId</td>
-    <td id="statusarea@(iGroup)_@(iPayment)">@payment.AccountingStatus.Substring(0, 4)</td>
-}
-</tr>
-    iPayment++;
+        </td>
+        @if (pvm.Test == "all") {
+            <td>@payment.PaymentBatchId</td>
+            <td id="statusarea@(iGroup)_@(iPayment)">@payment.AccountingStatus.Substring(0, 4)</td>
+        }
+    </tr>
+        iPayment++;
+    }
+    if (pubGroup.Count() > 1) // the publisher has payments from multiple accounting periods
+    {
+        var currencies = pubGroup.Select(p => p.PubPayCurr).Distinct();
+        var pubCurrency = (currencies.Count() == 1) ? currencies.First() : null;
+        var pubPayoutTotal = pubGroup.Sum(p => p.PubPayout.Value);
+    <tr class="pubTotalRow">
+        <td style="text-align:right">TOTAL</td>
+        <td>@pubGroup.Key</td>
+        <td style="text-align:right">@Html.FormatCurrency(pubCurrency, pubPayoutTotal)</td>
+        <td><a href="#" onclick="ShowNotes('@pubGroup.Key');return false">notes</a></td>
+        <td></td>
+        @if (pvm.Test == "all") {
+            <td></td>
+            <td></td>
+        }
+    </tr>
+    }
 }
 <tr>
     <td></td>
     <td style="font-weight:bold">TOTAL</td>
-    <td style="font-weight:bold">@Html.FormatCurrency(Model.Key.Currency, payoutTotal.Value)</td>
+    <td style="font-weight:bold; text-align:right">@Html.FormatCurrency(Model.Key.Currency, payoutTotal.Value)</td>
     <td></td>
-    <td>@if(Model.Count() > 1){
+    <td style="font-weight:bold">@if(Model.Count() > 1){
             <a href="#" onclick="if (confirm('Press OK to confirm Release All')) ReleaseAll(@iGroup, @Model.Count()); return false">Release All</a>
     }</td>
 @if (pvm.Test == "all") {
