--- a/1/EomTool/EomToolWeb/Views/PaymentBatches/Payments.cshtml
+++ b/1/EomTool/EomToolWeb/Views/PaymentBatches/Payments.cshtml
@@ -18,10 +18,10 @@
         var pubCurrency = (currencies.Count() == 1) ? currencies.First() : null;
         var pubPayoutTotal = pubGroup.Sum(p => p.PubPayout.Value);
     <tr class="pubTotalRow">
-        <td style="text-align:right"></td>
+        <td style="text-align:center"><a href="#" onclick="$('.pubGroup@(iGroup +"_"+ iPubGroup)Sub').toggle(); return false">+</a></td>
         <td>@pubGroup.Key</td>
         <td style="text-align:right">@Html.FormatCurrency(pubCurrency, pubPayoutTotal)</td>
-        <td><a href="#" onclick="ShowNotes('@pubGroup.Key');return false">notes</a></td>
+        <td>@if (false) {<a href="#" onclick="ShowNotes('@pubGroup.Key'); return false">notes</a>}</td>
         <td><a href="#" onclick="$('.pubGroup@(iGroup +"_"+ iPubGroup)Sub').toggle(); return false">Multiple months</a></td>
         @if (pvm.Test == "all") {
             <td></td>
@@ -36,9 +36,7 @@
         <td>@payment.AccountingPeriod</td>
         <td><a href="#" onclick="ShowPubRep('@payment.Publisher', '@payment.AccountingPeriod'); return false">@payment.Publisher</a></td>
         <td style="text-align:right">@Html.FormatCurrency(payment.PubPayCurr, payment.PubPayout.Value)</td>
-        <td>@if (pubGroup.Count() == 1) {
-            <a href="#" onclick="ShowNotes('@payment.Publisher');return false">notes</a>
-        }</td>
+        <td><a href="#" onclick="ShowNotes('@payment.Publisher', '@payment.AccountingPeriod'); return false">notes</a></td>
         <td id="actionarea@(iGroup)_@(iPayment)">
         @using (Html.BeginForm("ReleaseItems", "PaymentBatches", FormMethod.Post, new { id = "form" + iGroup + "_" + iPayment, data_state = (isInitialstate ? "initial" : "") }))
         {
@@ -53,7 +51,7 @@
                 if (payment.AccountingStatusId == ItemAccountingStatus.Hold) {
                     <text>Hold</text>
                 } else {
-                    <a href="#" onclick="ShowNotesForHold('@payment.Publisher', '@(iGroup +"_"+ iPayment)'); return false">Hold</a>
+                    <a href="#" onclick="ShowNotesForHold('@payment.Publisher', '@payment.AccountingPeriod', '@(iGroup +"_"+ iPayment)'); return false">Hold</a>
                 }
             }
             if (pvm.Test == "all") {
