web: show pub-attachments

--- a/1/EomTool/EomToolWeb/Views/PaymentBatches/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/PaymentBatches/Summary.cshtml
@@ -82,6 +82,7 @@
 </div>
 
 @Html.Partial("PubNotesInfrastructure")
+@Html.Partial("PubAttachmentsInfrastructure")
 
 @section scripts {
 <script type="text/javascript">
